[gd_scene load_steps=3 format=3 uid="uid://cxigphsyctrqn"]

[ext_resource type="Theme" uid="uid://cblqb84whle2r" path="res://ui/bebus_theme.tres" id="1_6blj3"]
[ext_resource type="Script" path="res://levels/player_lobby.gd" id="1_p2yw4"]

[node name="PlayerLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p2yw4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="LANCONTROLLERJOIN" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_6blj3")
text = "join as LAN controller"

[node name="REMOTEPLAYERJOIN" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_6blj3")
text = "join as remote player"

[connection signal="pressed" from="MarginContainer/VBoxContainer/LANCONTROLLERJOIN" to="." method="_on_lancontrollerjoin_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/REMOTEPLAYERJOIN" to="." method="_on_remoteplayerjoin_pressed"]
